test_run/crash-reports/crash-2023-10-30_17.38.09-client.txt
---- Minecraft Crash Report ----
// Hey, that tickles! Hehehe!

Time: 30/10/23 17:38
Description: Ticking entity

<eval>:1 TypeError: mc.thePlayer.onGround is not a function
	at jdk.nashorn.internal.runtime.ECMAErrors.error(ECMAErrors.java:57)
	at jdk.nashorn.internal.runtime.ECMAErrors.typeError(ECMAErrors.java:213)
	at jdk.nashorn.internal.runtime.ECMAErrors.typeError(ECMAErrors.java:185)
	at jdk.nashorn.internal.runtime.ECMAErrors.typeError(ECMAErrors.java:172)
	at jdk.nashorn.internal.runtime.ScriptObject.notAFunction(ScriptObject.java:1861)
	at jdk.nashorn.internal.runtime.ScriptObject.findCallMethod(ScriptObject.java:1857)
	at jdk.nashorn.internal.runtime.ScriptObject.lookup(ScriptObject.java:1825)
	at jdk.nashorn.internal.runtime.linker.PrimitiveLookup.lookupPrimitive(PrimitiveLookup.java:155)
	at jdk.nashorn.internal.runtime.linker.PrimitiveLookup.lookupPrimitive(PrimitiveLookup.java:80)
	at jdk.nashorn.internal.objects.NativeBoolean.lookupPrimitive(NativeBoolean.java:167)
	at jdk.nashorn.internal.objects.Global.primitiveLookup(Global.java:1138)
	at jdk.nashorn.internal.runtime.linker.NashornPrimitiveLinker.getGuardedInvocation(NashornPrimitiveLinker.java:72)
	at jdk.internal.dynalink.support.CompositeTypeBasedGuardingDynamicLinker.getGuardedInvocation(CompositeTypeBasedGuardingDynamicLinker.java:176)
	at jdk.internal.dynalink.support.CompositeGuardingDynamicLinker.getGuardedInvocation(CompositeGuardingDynamicLinker.java:124)
	at jdk.internal.dynalink.support.LinkerServicesImpl.getGuardedInvocation(LinkerServicesImpl.java:154)
	at jdk.internal.dynalink.DynamicLinker.relink(DynamicLinker.java:253)
	at jdk.nashorn.internal.scripts.Script$Recompilation$3$81$\^eval\_.L:1(<eval>:1)
	at jdk.nashorn.javaadapters.java.util.function.Consumer.accept(Unknown Source)
	at dev.sakey.mist.scripts.bindings.ModuleBinding.lambda$onEvent$2(ModuleBinding.java:85)
	at dev.sakey.mist.events.EventManager.handleEvent(EventManager.java:19)
	at net.minecraft.client.entity.EntityPlayerSP.onUpdateWalkingPlayer(EntityPlayerSP.java:137)
	at net.minecraft.client.entity.EntityPlayerSP.onUpdate(EntityPlayerSP.java:126)
	at net.minecraft.world.World.updateEntityWithOptionalForce(World.java:1709)
	at net.minecraft.world.World.updateEntity(World.java:1682)
	at net.minecraft.world.World.updateEntities(World.java:1537)
	at net.minecraft.client.Minecraft.runTick(Minecraft.java:2100)
	at net.minecraft.client.Minecraft.runGameLoop(Minecraft.java:1045)
	at net.minecraft.client.Minecraft.run(Minecraft.java:353)
	at net.minecraft.client.main.Main.main(Main.java:113)
	at Start.main(Start.java:11)


A detailed walkthrough of the error, its code path and all known details is as follows:
---------------------------------------------------------------------------------------

-- Head --
Stacktrace:
	at jdk.nashorn.internal.runtime.ECMAErrors.error(ECMAErrors.java:57)
	at jdk.nashorn.internal.runtime.ECMAErrors.typeError(ECMAErrors.java:213)
	at jdk.nashorn.internal.runtime.ECMAErrors.typeError(ECMAErrors.java:185)
	at jdk.nashorn.internal.runtime.ECMAErrors.typeError(ECMAErrors.java:172)
	at jdk.nashorn.internal.runtime.ScriptObject.notAFunction(ScriptObject.java:1861)
	at jdk.nashorn.internal.runtime.ScriptObject.findCallMethod(ScriptObject.java:1857)
	at jdk.nashorn.internal.runtime.ScriptObject.lookup(ScriptObject.java:1825)
	at jdk.nashorn.internal.runtime.linker.PrimitiveLookup.lookupPrimitive(PrimitiveLookup.java:155)
	at jdk.nashorn.internal.runtime.linker.PrimitiveLookup.lookupPrimitive(PrimitiveLookup.java:80)
	at jdk.nashorn.internal.objects.NativeBoolean.lookupPrimitive(NativeBoolean.java:167)
	at jdk.nashorn.internal.objects.Global.primitiveLookup(Global.java:1138)
	at jdk.nashorn.internal.runtime.linker.NashornPrimitiveLinker.getGuardedInvocation(NashornPrimitiveLinker.java:72)
	at jdk.internal.dynalink.support.CompositeTypeBasedGuardingDynamicLinker.getGuardedInvocation(CompositeTypeBasedGuardingDynamicLinker.java:176)
	at jdk.internal.dynalink.support.CompositeGuardingDynamicLinker.getGuardedInvocation(CompositeGuardingDynamicLinker.java:124)
	at jdk.internal.dynalink.support.LinkerServicesImpl.getGuardedInvocation(LinkerServicesImpl.java:154)
	at jdk.internal.dynalink.DynamicLinker.relink(DynamicLinker.java:253)
	at jdk.nashorn.internal.scripts.Script$Recompilation$3$81$\^eval\_.L:1(<eval>:1)
	at jdk.nashorn.javaadapters.java.util.function.Consumer.accept(Unknown Source)
	at dev.sakey.mist.scripts.bindings.ModuleBinding.lambda$onEvent$2(ModuleBinding.java:85)
	at dev.sakey.mist.events.EventManager.handleEvent(EventManager.java:19)
	at net.minecraft.client.entity.EntityPlayerSP.onUpdateWalkingPlayer(EntityPlayerSP.java:137)
	at net.minecraft.client.entity.EntityPlayerSP.onUpdate(EntityPlayerSP.java:126)
	at net.minecraft.world.World.updateEntityWithOptionalForce(World.java:1709)
	at net.minecraft.world.World.updateEntity(World.java:1682)

-- Entity being ticked --
Details:
	Entity Type: null (net.minecraft.client.entity.EntityPlayerSP)
	Entity ID: 78
	Entity Name: Player984
	Entity's Exact location: 745.15, 70.00, 410.19
	Entity's Block location: 745.00,70.00,410.00 - World: (745,70,410), Chunk: (at 9,4,10 in 46,25; contains blocks 736,0,400 to 751,255,415), Region: (1,0; contains chunks 32,0 to 63,31, blocks 512,0,0 to 1023,255,511)
	Entity's Momentum: 0.00, -0.08, 0.00
	Entity's Rider: ~~ERROR~~ NullPointerException: null
	Entity's Vehicle: ~~ERROR~~ NullPointerException: null
Stacktrace:
	at net.minecraft.world.World.updateEntities(World.java:1537)

-- Affected level --
Details:
	Level name: MpServer
	All players: 1 total; [EntityPlayerSP['Player984'/78, l='MpServer', x=745.15, y=70.00, z=410.19]]
	Chunk stats: MultiplayerChunkCache: 289, 289
	Level seed: 0
	Level generator: ID 02 - largeBiomes, ver 0. Features enabled: false
	Level generator options: 
	Level spawn location: 584.00,64.00,166.00 - World: (584,64,166), Chunk: (at 8,4,6 in 36,10; contains blocks 576,0,160 to 591,255,175), Region: (1,0; contains chunks 32,0 to 63,31, blocks 512,0,0 to 1023,255,511)
	Level time: 856452 game time, 50109 day time
	Level dimension: 0
	Level storage version: 0x00000 - Unknown?
	Level weather: Rain time: 0 (now: false), thunder time: 0 (now: false)
	Level game mode: Game mode: creative (ID 1). Hardcore: false. Cheats: false
	Forced entities: 56 total; [EntityBat['Bat'/129, l='MpServer', x=719.25, y=15.00, z=412.25], EntityBat['Bat'/130, l='MpServer', x=711.38, y=14.57, z=407.92], EntityBat['Bat'/131, l='MpServer', x=719.59, y=17.10, z=415.75], EntitySkeleton['Skeleton'/132, l='MpServer', x=735.47, y=21.00, z=442.09], EntitySkeleton['Skeleton'/135, l='MpServer', x=762.28, y=23.00, z=467.28], EntitySkeleton['Skeleton'/136, l='MpServer', x=762.50, y=23.00, z=471.50], EntitySkeleton['Skeleton'/137, l='MpServer', x=753.41, y=23.00, z=467.78], EntitySpider['Spider'/138, l='MpServer', x=763.94, y=23.00, z=467.88], EntityCreeper['Creeper'/140, l='MpServer', x=763.53, y=20.00, z=485.28], EntitySkeleton['Skeleton'/144, l='MpServer', x=783.50, y=24.00, z=415.50], EntityBat['Bat'/147, l='MpServer', x=773.78, y=24.53, z=488.00], EntitySkeleton['Skeleton'/148, l='MpServer', x=774.16, y=23.00, z=486.50], EntitySkeleton['Skeleton'/151, l='MpServer', x=790.84, y=23.00, z=393.53], EntityZombie['Zombie'/152, l='MpServer', x=796.09, y=26.00, z=394.28], EntitySpider['Spider'/153, l='MpServer', x=796.84, y=25.00, z=391.78], EntityZombie['Zombie'/154, l='MpServer', x=783.56, y=16.00, z=413.97], EntityCreeper['Creeper'/155, l='MpServer', x=788.50, y=39.00, z=467.50], EntityZombie['Zombie'/159, l='MpServer', x=814.50, y=26.00, z=386.50], EntityBat['Bat'/31, l='MpServer', x=671.97, y=26.00, z=339.53], EntityZombie['Zombie'/160, l='MpServer', x=815.00, y=24.00, z=394.31], EntityBat['Bat'/33, l='MpServer', x=716.50, y=22.00, z=355.63], EntityBat['Bat'/34, l='MpServer', x=714.25, y=24.03, z=368.03], EntityCreeper['Creeper'/440, l='MpServer', x=703.91, y=27.00, z=458.35], EntitySkeleton['Skeleton'/79, l='MpServer', x=722.50, y=21.00, z=419.88], EntityPlayerSP['Player984'/78, l='MpServer', x=745.15, y=70.00, z=410.19], EntityZombie['Zombie'/93, l='MpServer', x=670.69, y=14.00, z=409.28], EntityCreeper['Creeper'/94, l='MpServer', x=672.50, y=15.00, z=408.03], EntityCreeper['Creeper'/95, l='MpServer', x=678.06, y=16.00, z=423.50], EntitySkeleton['Skeleton'/96, l='MpServer', x=685.88, y=26.00, z=408.53], EntityBat['Bat'/97, l='MpServer', x=685.25, y=24.75, z=467.63], EntityCreeper['Creeper'/100, l='MpServer', x=696.53, y=26.00, z=371.94], EntitySkeleton['Skeleton'/101, l='MpServer', x=698.81, y=27.00, z=382.50], EntityCreeper['Creeper'/102, l='MpServer', x=697.63, y=24.00, z=371.66], EntitySkeleton['Skeleton'/103, l='MpServer', x=702.88, y=26.00, z=399.53], EntitySkeleton['Skeleton'/104, l='MpServer', x=699.41, y=27.00, z=388.16], EntitySkeleton['Skeleton'/105, l='MpServer', x=693.47, y=28.00, z=386.91], EntitySkeleton['Skeleton'/106, l='MpServer', x=698.50, y=44.00, z=385.09], EntitySkeleton['Skeleton'/107, l='MpServer', x=696.41, y=26.00, z=413.16], EntitySkeleton['Skeleton'/108, l='MpServer', x=698.25, y=36.00, z=415.25], EntityZombie['Zombie'/109, l='MpServer', x=688.84, y=36.00, z=409.63], EntityCreeper['Creeper'/110, l='MpServer', x=700.66, y=21.00, z=422.94], EntityCreeper['Creeper'/111, l='MpServer', x=695.50, y=32.00, z=431.50], EntitySkeleton['Skeleton'/112, l='MpServer', x=693.50, y=27.00, z=443.13], EntitySkeleton['Skeleton'/113, l='MpServer', x=696.91, y=27.00, z=438.16], EntitySkeleton['Skeleton'/114, l='MpServer', x=696.94, y=27.00, z=442.66], EntityZombie['Zombie'/115, l='MpServer', x=695.53, y=21.00, z=433.03], EntitySkeleton['Skeleton'/116, l='MpServer', x=702.28, y=27.00, z=448.72], EntityZombie['Zombie'/118, l='MpServer', x=712.50, y=15.00, z=405.50], EntityBat['Bat'/120, l='MpServer', x=722.33, y=13.50, z=418.19], EntitySkeleton['Skeleton'/121, l='MpServer', x=708.84, y=28.00, z=414.47], EntityBat['Bat'/122, l='MpServer', x=707.25, y=31.10, z=415.75], EntityZombie['Zombie'/123, l='MpServer', x=715.81, y=25.00, z=413.69], EntitySkeleton['Skeleton'/124, l='MpServer', x=715.50, y=18.00, z=422.50], EntityZombie['Zombie'/125, l='MpServer', x=713.41, y=18.00, z=430.69], EntityEnderman['Enderman'/126, l='MpServer', x=714.58, y=19.14, z=422.76], EntityCreeper['Creeper'/127, l='MpServer', x=717.81, y=69.00, z=435.72]]
	Retry entities: 0 total; []
	Server brand: vanilla
	Server type: Integrated singleplayer server
Stacktrace:
	at net.minecraft.client.multiplayer.WorldClient.addWorldInfoToCrashReport(WorldClient.java:356)
	at net.minecraft.client.Minecraft.addGraphicsAndWorldToCrashReport(Minecraft.java:2638)
	at net.minecraft.client.Minecraft.run(Minecraft.java:374)
	at net.minecraft.client.main.Main.main(Main.java:113)
	at Start.main(Start.java:11)

-- System Details --
Details:
	Minecraft Version: 1.8.9
	Operating System: Linux (amd64) version 6.5.4-arch2-1
	Java Version: 1.8.0_382, Temurin
	Java VM Version: OpenJDK 64-Bit Server VM (mixed mode), Temurin
	Memory: 848090320 bytes (808 MB) / 2706898944 bytes (2581 MB) up to 3719299072 bytes (3547 MB)
	JVM Flags: 0 total; 
	IntCache: cache: 0, tcache: 0, allocated: 18, tallocated: 130
	Launched Version: mcp
	LWJGL: 2.9.4
	OpenGL: NVIDIA GeForce GTX 1650/PCIe/SSE2 GL version 4.6.0 NVIDIA 535.104.05, NVIDIA Corporation
	GL Caps: Using GL 1.3 multitexturing.
Using GL 1.3 texture combiners.
Using framebuffer objects because OpenGL 3.0 is supported and separate blending is supported.
Shaders are available because OpenGL 2.1 is supported.
VBOs are available because OpenGL 1.5 is supported.

	Using VBOs: No
	Is Modded: Very likely; Jar signature invalidated
	Type: Client (map_client.txt)
	Resource Packs: 
	Current Language: English (US)
	Profiler Position: N/A (disabled)
	CPU: 8x Intel(R) Core(TM) i7-3770 CPU @ 3.40GHz
	OptiFine Version: OptiFine_1.8.9_HD_U_M6_pre2
	OptiFine Build: ~~NULL~~
	Render Distance Chunks: 8
	Mipmaps: 4
	Anisotropic Filtering: 1
	Antialiasing: 0
	Multitexture: false
	Shaders: null
	OpenGlVersion: 4.6.0 NVIDIA 535.104.05
	OpenGlRenderer: NVIDIA GeForce GTX 1650/PCIe/SSE2
	OpenGlVendor: NVIDIA Corporation
	CpuCount: 8